--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.31.1",
     "styled-jsx": "^5.0.5"
   },
   "devDependencies": {
